--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
     <groupId>org.hff</groupId>
     <artifactId>grasscutter-plugin</artifactId>
-    <version>1.5.2</version>
+    <version>1.5.3</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <grasscutter.version>1.4.5</grasscutter.version>
+        <grasscutter.version>1.4.6</grasscutter.version>
         <jjwt.version>0.11.5</jjwt.version>
         <expiringMap.version>0.5.10</expiringMap.version>
         <lombok.version>1.18.24</lombok.version>
@@ -25,7 +25,7 @@
             <artifactId>grasscutter</artifactId>
             <version>${grasscutter.version}</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/grasscutter-1.4.5-dev.jar</systemPath>
+            <systemPath>${project.basedir}/lib/grasscutter-${grasscutter.version}.jar</systemPath>
         </dependency>
         <!-- jwt start -->
         <dependency>
